Fix button text wrap (#339)

--- a/frontend/src/screens/AuthorMainPage/components/AuthorCardsSegment/styles.module.sass
+++ b/frontend/src/screens/AuthorMainPage/components/AuthorCardsSegment/styles.module.sass
@@ -27,6 +27,10 @@
   height: 40px
   width: 165px
 
+.btn_create_more
+  padding: unset !important
+  white-space: nowrap !important
+
 .cards_layout
   display: flex
   flex-direction: row
